--- a/frontend/public/env.js.tmpl
+++ b/frontend/public/env.js.tmpl
@@ -1,6 +1,6 @@
 window.__ENV__ = {
-  LOGTO_APP_ID:   "${LOGTO_APP_ID}",
-  LOGTO_DOMAIN:   "${LOGTO_DOMAIN}",
-  API_DOMAIN:     "${API_DOMAIN}",
-  WEB_DOMAIN:     "${WEB_DOMAIN}"
+  VITE_LOGTO_APP_ID:   "${LOGTO_APP_ID}",
+  VITE_LOGTO_DOMAIN:   "${LOGTO_DOMAIN}",
+  VITE_API_DOMAIN:     "${API_DOMAIN}",
+  VITE_WEB_DOMAIN:     "${WEB_DOMAIN}"
 };
